# AdventOfCodeArchive

./: Cargo.toml  package.json
aoc-2018/: .clangd  CMakeLists.txt  MODULE.bazel  b_build_and_run.ps1  build.ps1  build_and_run.ps1  build_and_test.ps1
aoc-2018/src/: BUILD  CMakeLists.txt  main.cpp
aoc-2018/src/days/: BUILD  day01.cpp  day01.hpp  day02.cpp  day02.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day07.hpp  day08.cpp  day08.hpp  day09.cpp  day09.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp
aoc-2018/src/util/: BUILD  cllist.cpp  cllist.hpp  file_reader.cpp  file_reader.hpp  solution.hpp  string_extra.cpp  string_extra.hpp  vector_extra.hpp
aoc-2018/test/: CMakeLists.txt
aoc-2018/test/days/: BUILD  day01_test.cpp  day02_test.cpp  day11_test.cpp
aoc-2019/: Cargo.toml
aoc-2019/src/: err.rs  lib.rs  util.rs
aoc-2019/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day12.rs  mod.rs
aoc-2020/: Cargo.toml
aoc-2020/src/: day01.rs  day02.rs  day02.test.ts  day02.ts  day03.rs  day04.rs  day04.ts  day05.test.ts  day05.ts  day06.test.ts  day06.ts  day07.test.ts  day07.ts  day08.test.ts  day08.ts  day09.rs  day10.rs
aoc2019/app/: Day01.hs
aoc2019/test/: Day01Spec.hs
common-helper/: Cargo.toml
common-helper/src/: lib.rs  lib.test.ts  lib.ts
